Cache class is added

--- a/makefile.inc
+++ b/makefile.inc
@@ -1,6 +1,5 @@
 ## For students: change this path to the root of your code
-CODEROOT = $(realpath $(dir $(lastword $(MAKEFILE_LIST))))
-//CODEROOT = "/Users/ekinoguz/Dropbox/2013S/CS222/project/project1-65849654/codebase"
+CODEROOT = "/media/cesar/work/Universities/UCI/Courses/CS 222 - Principles of Data Management/Project/cs222-database/"
 #CC = gcc
 CC = g++
 
