--- a/makefile.inc
+++ b/makefile.inc
@@ -16,5 +16,5 @@ ifeq ($(UNAME),Darwin)
 endif
 
 #CPPFLAGS = -Wall -I$(CODEROOT) -O3  # maximal optimization
-#CPPFLAGS = -std=c++0x -Wall -I$(CODEROOT) -DDATABASE_FOLDER=\"$(CODEROOT)/db\"  -g  # with debugging info 
-CPPFLAGS = -std=c++0x -Wall -I$(CODEROOT) -DDATABASE_FOLDER=\"$(CODEROOT)/db\" -DDEBUG=true -DFUCK_CACHE=true -g     # with debugging info
+CPPFLAGS = -std=c++0x -Wall -I$(CODEROOT) -DDATABASE_FOLDER=\"$(CODEROOT)/db\"  -g  # with debugging info 
+#CPPFLAGS = -std=c++0x -Wall -I$(CODEROOT) -DDATABASE_FOLDER=\"$(CODEROOT)/db\" -DDEBUG=true -DFUCK_CACHE=true -g     # with debugging info
