adding qe to cli makefile

--- a/cli/makefile
+++ b/cli/makefile
@@ -14,8 +14,8 @@ clitest.o: cli.h
 start.o: cli.h
 
 # binary dependencies
-clitest: clitest.o libcli.a $(CODEROOT)/ix/libix.a $(CODEROOT)/rm/librm.a $(CODEROOT)/pf/libpf.a
-start: start.o libcli.a $(CODEROOT)/ix/libix.a $(CODEROOT)/rm/librm.a $(CODEROOT)/pf/libpf.a
+clitest: clitest.o libcli.a $(CODEROOT)/qe/libqe.a $(CODEROOT)/ix/libix.a $(CODEROOT)/rm/librm.a $(CODEROOT)/pf/libpf.a
+start: start.o libcli.a $(CODEROOT)/qe/libqe.a $(CODEROOT)/ix/libix.a $(CODEROOT)/rm/librm.a $(CODEROOT)/pf/libpf.a
 
 $(CODEROOT)/rm/librm.a:
 	$(MAKE) -C $(CODEROOT)/rm librm.a
@@ -29,6 +29,9 @@ $(CODEROOT)/ix/libix.a:
 	$(MAKE) -C $(CODEROOT)/ix libix.a
 
 
+.PHONY: $(CODEROOT)/pf/libpf.a $(CODEROOT)/rm/librm.a $(CODEROOT)/ix/libix.a
+$(CODEROOT)/qe/libqe.a:
+	$(MAKE) -C $(CODEROOT)/qe libqe.a
 
 .PHONY: clean
 clean:
@@ -36,3 +39,4 @@ clean:
 	$(MAKE) -C $(CODEROOT)/pf clean
 	$(MAKE) -C $(CODEROOT)/rm clean
 	$(MAKE) -C $(CODEROOT)/ix clean	
+	$(MAKE) -C $(CODEROOT)/qe clean	
